# DigiDoc4-Client

./: AppxManifest.xml.cmake  CMakeLists.txt  Resources.resw  qdigidoc4.wxs
client/: Application.cpp  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  QCNG.cpp  main.cpp  qdigidoc4.desktop
client/crypto/: CryptoDoc.cpp
client/dialogs/: MobileDialog.cpp  MobileDialog.ui  MobileProgress.cpp  MobileProgress.ui  PinUnblock.ui  RoleAddressDialog.cpp  SettingsDialog.cpp  SettingsDialog.ui  SmartIDDialog.cpp  SmartIDDialog.ui  SmartIDProgress.cpp  SmartIDProgress.h
client/images/: images.qrc
client/mac/: Info.plist.cmake
client/translations/: en.ts  et.ts  ru.ts
client/widgets/: ContainerPage.cpp
extensions/DigiDocQL/: CMakeLists.txt  Info.plist.cmake  PreviewViewController.entitlements  PreviewViewController.mm
